--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
   </div></app-navbar
 >
 
-<div class="background-image absolute top-20">
+<header class="background-image absolute top-20">
   <div class="overlay"></div>
   <div class="overlay-content">
     <p class="fw-medium">Simple. Quick. Secure.</p>
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>
-</div>
+</header>
 <div class="pt-[150px]">
   <p
     style="
