--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="w-[1490px] h-[80px] fixed top-0 navbar">
   <div class="flex flex-row w-[1440px] h-[65px]">
-    <ul class="flex w-[1440px] justify-around">
+    <ul class="flex w-[1440px]">
       <li class="logo p-2 mr-9 font-[600] text-[32px] text-[#24221E]">
         Speedo Transfer
       </li>
