--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,17 +16,26 @@
         </p>
 
         <section>
-          <p class="mb-3">
-            <i class="fa-regular fa-circle-right text-[#871E35]"></i> Lorem
-            Ipsum is simply dummy
+          <p class="mb-3 text-center">
+            <fa-icon
+              class="text-[hsla(347, 64%, 32%)]"
+              [icon]="['fas', 'circle-right']"
+            ></fa-icon>
+            Lorem Ipsum is simply dummy
           </p>
-          <p class="mb-3">
-            <i class="fa-regular fa-circle-right text-[#871E35]"></i> Lorem
-            Ipsum is simply dummy text of the printing
+          <p class="mb-3 text-center">
+            <fa-icon
+              class="text-[hsla(347, 64%, 32%)]"
+              [icon]="['fas', 'circle-right']"
+            ></fa-icon>
+            Lorem Ipsum is simply dummy text of the printing
           </p>
-          <p class="mb-3">
-            <i class="fa-regular fa-circle-right text-[#871E35]"></i> Lorem
-            Ipsum is simply
+          <p class="mb-3 text-center">
+            <fa-icon
+              class="text-[hsla(347, 64%, 32%)]"
+              [icon]="['fas', 'circle-right']"
+            ></fa-icon>
+            Lorem Ipsum is simply
           </p>
         </section>
         <div class="images">
