--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,9 +1,182 @@
+// nav {
+//   top: 0;
+//   z-index: 10;
+//   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+//   background-color: white;
+
+//   .item {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     padding: 10px;
+//     color: #3c3a37;
+//     font-weight: 500;
+//   }
+//   .initial {
+//     border: 1px solid;
+//     border-radius: 50%;
+//     font-size: 24px;
+//     font-weight: 500;
+//     width: 45px;
+//     height: 40px;
+//     text-align: center;
+//     background-color: #e3e2e2;
+//     margin-right: 10px;
+//     border-color: #e3e2e2;
+//     color: #3c3a37;
+//   }
+//   .menu button {
+//     margin-bottom: 10px;
+//   }
+
+//   .menu button.active {
+//     background-color: red;
+//   }
+
+//   .setting .txt-red {
+//     color: red;
+//   }
+
+//   .item {
+//     position: relative;
+//   }
+
+//   .dropdown {
+//     display: block;
+//     top: 60px;
+//     background-color: #ffffff;
+//     width: 220px;
+//     height: 320px;
+//   }
+//   .dropitems {
+//     width: 190px;
+//     margin-left: 10px;
+//     padding: 20px 15px 20px 15px;
+//     gap: 8px;
+//     border-bottom: 1px;
+//     border-style: solid;
+//     border-color: #e3e2e2;
+//     font-weight: 500;
+//     color: #3c3a37;
+//   }
+//   .loggout {
+//     border-bottom: 0px !important;
+//     border-style: none !important;
+//   }
+// }
+
+// :host-context(.nav-home) .item:first-child {
+//   color: #871e35;
+// }
+// :host-context(.nav-home) .item {
+//   font-weight: 500;
+// }
+
+// :host-context(.nav-money-transfer) .item:nth-child(2) {
+//   color: #871e35;
+// }
+// :host-context(.nav-money-transfer) .item {
+//   font-weight: 500;
+// }
+
+// :host-context(.nav-my-account) .item:last-child {
+//   color: #871e35;
+// }
+
+// .mat-progress-bar {
+//   background-color: hsl(347, 64%, 32%) !important;
+// }
+// @media (max-width: 600px) {
+//   nav {
+//     position: fixed;
+//     width: 100%;
+//     top: 0;
+//     left: 0;
+//     z-index: 10;
+//     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+//     background-color: white;
+//     padding: 10px;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: flex-start;
+
+//     .item {
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       padding: 12px;
+//       color: #3c3a37;
+//       font-weight: 500;
+//       font-size: 16px;
+//       width: 100%;
+//       text-align: center;
+//     }
+
+//     .initial {
+//       border: 1px solid;
+//       border-radius: 50%;
+//       font-size: 20px;
+//       width: 40px;
+//       height: 40px;
+//       margin-right: 0;
+//     }
+
+//     .menu {
+//       width: 100%;
+//       padding-bottom: 10px;
+
+//       button {
+//         width: 100%; /* Full width for buttons */
+//         height: 50px; /* Increase height for easier tap */
+//         padding: 10px;
+//         font-size: 16px; /* Adjust font size */
+//         margin-bottom: 10px;
+//         text-align: center;
+
+//         &.active {
+//           background-color: #871e35;
+//           color: #ffffff;
+//         }
+//       }
+//     }
+
+//     .dropdown {
+//       display: block;
+//       position: absolute;
+//       top: 60px;
+//       left: 0;
+//       background-color: #ffffff;
+//       width: 100%;
+//       max-width: 100%; /* no overflow */
+//       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+//       padding: 10px 0;
+//       box-sizing: border-box;
+//     }
+
+//     .dropitems {
+//       width: 100%;
+//       padding: 10px;
+//       font-size: 14px;
+//       border-bottom: 1px solid #e3e2e2;
+//       color: #3c3a37;
+//       margin: 0;
+//       text-align: center;
+//     }
+
+//     .loggout {
+//       border-bottom: none !important;
+//       border-style: none !important;
+//     }
+//   }
+// }
 nav {
   top: 0;
   z-index: 10;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-color: white;
-
+  li {
+    margin-right: 400px;
+  }
   .item {
     display: flex;
     justify-content: center;
@@ -11,6 +184,7 @@ nav {
     padding: 10px;
     color: #3c3a37;
     font-weight: 500;
+    margin-right: 10px;
   }
   .initial {
     border: 1px solid;
@@ -22,25 +196,22 @@ nav {
     text-align: center;
     background-color: #e3e2e2;
     margin-right: 10px;
+
     border-color: #e3e2e2;
     color: #3c3a37;
   }
   .menu button {
     margin-bottom: 10px;
   }
-
   .menu button.active {
     background-color: red;
   }
-
   .setting .txt-red {
     color: red;
   }
-
   .item {
     position: relative;
   }
-
   .dropdown {
     display: block;
     top: 60px;
@@ -71,14 +242,12 @@ nav {
 :host-context(.nav-home) .item {
   font-weight: 500;
 }
-
 :host-context(.nav-money-transfer) .item:nth-child(2) {
   color: #871e35;
 }
 :host-context(.nav-money-transfer) .item {
   font-weight: 500;
 }
-
 :host-context(.nav-my-account) .item:last-child {
   color: #871e35;
 }
@@ -86,7 +255,8 @@ nav {
 .mat-progress-bar {
   background-color: hsl(347, 64%, 32%) !important;
 }
-@media (max-width: 600px) {
+
+@media (max-width: 1300px) {
   nav {
     position: fixed;
     width: 100%;
@@ -98,7 +268,11 @@ nav {
     padding: 10px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: stretch; /* Ensures full width for items */
+    margin: 0px;
+    li {
+      margin-right: 50px;
+    }
 
     .item {
       display: flex;
@@ -108,8 +282,9 @@ nav {
       color: #3c3a37;
       font-weight: 500;
       font-size: 16px;
-      width: 100%;
+      width: 100%; /* Full width */
       text-align: center;
+      margin: 0px;
     }
 
     .initial {
@@ -119,6 +294,7 @@ nav {
       width: 40px;
       height: 40px;
       margin-right: 0;
+      margin: 0px;
     }
 
     .menu {
@@ -146,7 +322,7 @@ nav {
       top: 60px;
       left: 0;
       background-color: #ffffff;
-      width: 100%;
+      width: 100%; /* Full width */
       max-width: 100%; /* no overflow */
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
       padding: 10px 0;
@@ -154,7 +330,190 @@ nav {
     }
 
     .dropitems {
+      width: 100%; /* Full width */
+      padding: 10px;
+      font-size: 14px;
+      border-bottom: 1px solid #e3e2e2;
+      color: #3c3a37;
+      margin: 0;
+      text-align: center;
+    }
+
+    .loggout {
+      border-bottom: none !important;
+      border-style: none !important;
+    }
+  }
+}
+@media (max-width: 1000px) {
+  nav {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    margin: 0px !important;
+    li {
+      margin: 0px;
+    }
+
+    .item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      color: #3c3a37;
+      font-weight: 500;
+      font-size: 10px;
+
+      text-align: center;
+      margin: 0px;
+    }
+
+    .initial {
+      border: 1px solid;
+      border-radius: 50%;
+      font-size: 10px;
+      width: 20px;
+      height: 20px;
+      margin-right: 0;
+      margin: 0px;
+    }
+
+    .menu {
       width: 100%;
+      padding-bottom: 10px;
+
+      button {
+        width: 100%; /* Full width for buttons */
+        height: 50px; /* Increase height for easier tap */
+
+        font-size: 16px; /* Adjust font size */
+
+        text-align: center;
+
+        &.active {
+          background-color: #871e35;
+          color: #ffffff;
+        }
+      }
+    }
+    .logo {
+      font-size: 13px;
+    }
+
+    .dropdown {
+      display: block;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background-color: #ffffff;
+      width: 100%; /* Full width */
+      max-width: 100%; /* no overflow */
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 10px 0;
+      box-sizing: border-box;
+    }
+
+    .dropitems {
+      width: 100%; /* Full width */
+      padding: 10px;
+      font-size: 14px;
+      border-bottom: 1px solid #e3e2e2;
+      color: #3c3a37;
+      margin: 0;
+      text-align: center;
+    }
+
+    .loggout {
+      border-bottom: none !important;
+      border-style: none !important;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  nav {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    margin: 0px !important;
+
+    li {
+      margin: 0px;
+    }
+    .logo {
+      font-size: 13px;
+    }
+
+    .item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #3c3a37;
+      font-weight: 500;
+      font-size: 10px;
+
+      text-align: center;
+      margin: 0px;
+    }
+
+    .initial {
+      border: 1px solid;
+      border-radius: 50%;
+      font-size: 10px;
+      width: 20px;
+      height: 20px;
+      margin-right: 0;
+      margin: 0px;
+    }
+
+    .menu {
+      width: 100%;
+      padding-bottom: 10px;
+
+      button {
+        width: 100%; /* Full width for buttons */
+        height: 50px; /* Increase height for easier tap */
+
+        font-size: 10px; /* Adjust font size */
+        margin-bottom: 10px;
+        text-align: center;
+
+        &.active {
+          background-color: #871e35;
+          color: #ffffff;
+        }
+      }
+    }
+
+    .dropdown {
+      display: block;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background-color: #ffffff;
+      width: 100%; /* Full width */
+      max-width: 100%; /* no overflow */
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 10px 0;
+      box-sizing: border-box;
+    }
+
+    .dropitems {
+      width: 100%; /* Full width */
       padding: 10px;
       font-size: 14px;
       border-bottom: 1px solid #e3e2e2;
